Fixed contrast of links on alerts (#4107)

--- a/src/NuGetGallery/Content/gallery/css/bootstrap-theme.css
+++ b/src/NuGetGallery/Content/gallery/css/bootstrap-theme.css
@@ -78,8 +78,12 @@ body h3 {
   padding: 2px 10px;
   margin: 0 2px;
   line-height: 2em;
-  color: #266daa;
+  color: #2e6da4;
   background-color: #eff9ff;
+}
+.tag:hover,
+.tag:focus {
+  color: #23527c;
 }
 .banner {
   padding-bottom: 10px;
@@ -95,6 +99,13 @@ body h3 {
 }
 .banner.banner-bright {
   background: yellow;
+}
+.alert a {
+  color: #2e6da4;
+}
+.alert a:hover,
+.alert a:focus {
+  color: #23527c;
 }
 .alert-transient .alert {
   padding: 10px;
